@@ -1,2 +1,5 @@
+01/30/2026:
+[+] Added Terraria (Thanks for the suggestion!)
+
 01/29/2026:
 [+] Added Unmonitored YouTube (Still a work in progress)
