@@ -406,7 +406,7 @@
 
     <div id="mainPage" class="page visible">
         <h1 class="centered">Welcome to the No Name Games External Launcher!</h1>
-        <h3 class="centered">Last update: January 29th, 2026. <a href="javascript:openchangelog()">View changelog</a></h3>
+        <h3 class="centered">Last update: January 30th, 2026. <a href="javascript:openchangelog()">View changelog</a></h3>
         <center>
             <button onclick="window.open('https://forms.gle/iFA6kCTM8AcctsrEA')">Go to bug report form</button>
             <button onclick="window.open('https://forms.gle/FJxL8tmAiefrrFst7')">Go to suggestion form</button>
